--- a/orangeSketch.html
+++ b/orangeSketch.html
@@ -22,7 +22,7 @@ button {
 
 <button onclick="transition()">Update</button>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 
 <script>
 
