--- a/murataSketch.html
+++ b/murataSketch.html
@@ -23,7 +23,7 @@ svg{
 }
 </style>
 <button onclick="transition()">Update</button>
-
+<p>Refresh to see another view!</p>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 
